// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AnalysisFormComponent first step should match snapshot 1`] = `
<div
  className="form"
>
  <Form
    hideRequiredMark={false}
    layout="horizontal"
    onSubmit={[Function]}
    prefixCls="ant-form"
  >
    <div
      className="form__inner"
    >
      <Connect(FileInputContainer)
        change={[Function]}
      />
      <NextStep
        currentStep={1}
        needed={
          Array [
            "file",
            "fileType",
          ]
        }
        onClick={[Function]}
        step={0}
      />
      <div>
        <ToolSelection />
        <NextStep
          currentStep={1}
          needed={
            Array [
              "analysisType",
              "file",
              "fileType",
            ]
          }
          onClick={[Function]}
          step={1}
          style={
            Object {
              "marginTop": 10,
            }
          }
        />
      </div>
    </div>
  </Form>
  <Error
    closeModal={[Function]}
    visible={false}
  />
</div>
`;

exports[`AnalysisFormComponent initial render should match snapshot 1`] = `
<div
  className="form"
>
  <Form
    hideRequiredMark={false}
    layout="horizontal"
    onSubmit={[Function]}
    prefixCls="ant-form"
  >
    <div
      className="form__inner"
    >
      <Connect(FileInputContainer)
        change={[Function]}
      />
      <NextStep
        currentStep={0}
        needed={
          Array [
            "file",
            "fileType",
          ]
        }
        onClick={[Function]}
        step={0}
      />
    </div>
  </Form>
  <Error
    closeModal={[Function]}
    visible={false}
  />
</div>
`;

exports[`AnalysisFormComponent second step should match snapshot 1`] = `
<div
  className="form"
>
  <Form
    hideRequiredMark={false}
    layout="horizontal"
    onSubmit={[Function]}
    prefixCls="ant-form"
  >
    <div
      className="form__inner"
    >
      <Connect(FileInputContainer)
        change={[Function]}
      />
      <NextStep
        currentStep={2}
        needed={
          Array [
            "file",
            "fileType",
          ]
        }
        onClick={[Function]}
        step={0}
      />
      <div>
        <ToolSelection />
        <NextStep
          currentStep={2}
          needed={
            Array [
              "analysisType",
              "file",
              "fileType",
            ]
          }
          onClick={[Function]}
          step={1}
          style={
            Object {
              "marginTop": 10,
            }
          }
        />
      </div>
      <div>
        <HeaderSelection
          change={[Function]}
        />
        <Submit
          errors={Object {}}
          handleOptions={[Function]}
          handleReset={[Function]}
          showOptions={false}
          submitPending={false}
        />
        <Options
          change={[Function]}
          show={false}
        />
      </div>
    </div>
  </Form>
  <Error
    closeModal={[Function]}
    visible={false}
  />
</div>
`;

exports[`AnalysisFormComponent status modal should match snapshot 1`] = `
<div
  className="form"
>
  <Form
    hideRequiredMark={false}
    layout="horizontal"
    onSubmit={[Function]}
    prefixCls="ant-form"
  >
    <div
      className="form__inner"
    >
      <Connect(FileInputContainer)
        change={[Function]}
      />
      <NextStep
        currentStep={0}
        needed={
          Array [
            "file",
            "fileType",
          ]
        }
        onClick={[Function]}
        step={0}
      />
    </div>
  </Form>
  <Error
    closeModal={[Function]}
    visible={false}
  />
  <Status
    closeModal={[Function]}
    taskID="task"
  />
</div>
`;
